# rcmc-public-code

./: README.md  experiment.ipynb
cpp/: CMakeLists.txt
cpp/include/: chemistry.hpp  io.hpp  linalg.hpp  network.hpp  numdef.hpp  rate_constant_matrix.hpp  rcmc.hpp  utility.hpp
data/: synthetic.txt
python/: error.py  load.py  plot.py
